--- a/website-2/package.json
+++ b/website-2/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "tailwindcss": "^3.3.5"
   }
 }
